# convert-fgd-dem-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README2.md  README_WINDOWS.md  check.txt  convert_osgeo4w.bat  justfile  merge_separate_tif.sh  vcpkg.json
.devcontainer/cuda12.2/: Dockerfile  devcontainer.json  postCreateCommand.sh
.devcontainer/linux/: Dockerfile
.devcontainer/mac/: Dockerfile  devcontainer.json
.github/workflows/: linux-build.yml  macos-build.yml  windows-build.yml  windows-deps.yml
include/: converter.hpp  dem.hpp  fast_fgd_parser.hpp  flat_array_2d.hpp  geotiff.hpp  memory_mapped_file.hpp  memory_pool.hpp  simd_utils.hpp  tbb_pipeline.hpp  xml_parser.hpp  zip_handler.hpp
scripts/: cleanup_claude_config.py
src/: converter.cpp  dem.cpp  geotiff.cpp  main.cpp  xml_parser.cpp  zip_handler.cpp
